# academic-author-disambiguation

./: .env.example  .gitignore  README.md  ins_id_cache.json  pyproject.toml  scrape.py  search.py
.claude/: CLAUDE.md
excel_dir/: JC_investigadores.xlsx  investigadores_v2.xlsx
publicaciones_openalex_per_researcher/: andrea_carolina_peña-vasquez_58487024100.xlsx  anna_lópez_puig_23098116500.xlsx  antonio_josé_caamaño_fernández_7005318939.xlsx  carlos_silva_lópez_7005151728.xlsx  daniel_gouger_50261677700.xlsx  david_h._flechner_12779199800.xlsx  francisco_javier_rodríguez_jiménez_55667444700.xlsx  janet_l._maldonado_7102839707.xlsx  jesús_maría_carrillo_esteban_56230873400.xlsx  joanne_scillitoe_8906528000.xlsx  jose_manuel_miranda_lopez_34571215900.xlsx  joseph_m._hall_56966876600.xlsx  josé_antonio_lupiañez_cara_7005267695.xlsx  josé_carlos_díez_masa_7004607447.xlsx  juan_josé_alcaraz_espín_35866530300.xlsx  lauro_olmo_enciso_8638192000.xlsx  mario_sanchez_sanz_12783533200.xlsx  paul_moss_wright_55239473300.xlsx  paul_richard_olson_6506528484.xlsx  rafael_gallego_sevilla_7005774990.xlsx  robert_lewis_10641476900.xlsx  scott_leary_7005886882.xlsx
samples/: sample_openalex_document_output.xlsx
scripts/: alex_documents_query.py  compile_script.py  open_alex_document_fill.py  open_alex_query.py  query_db.py  query_db2.py  run_openalex.py  run_pipeline.py  run_scholar.py  run_scopus.py  scopus_database_matching.py  scopus_id_match.py  scopus_query.py
src/: config.py
src/bigquery/: matching.py  query_db.py
src/common/: name_matching.py
src/openalex/: query.py  (+1 more)
(+5 files in other folders)
